# petcare-cost-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  nginx.conf  notebook.ipynb  pyproject.toml  requirements.txt  rolling_update.sh
dashboard/: Dockerfile  README.md  generate_sample.py  pyproject.toml  requirements.txt  streamlit_app.py
dashboard/pages/: page_1.py  page_2.py
dashboard/src/: app.py  configurations.py  data_generator.py  dataloader.py  main.py  map_visualization.py  model.py  schema.py  service.py  ui.py  view.py
dashboard/src/config/: settings.py
dashboard/src/controllers/: dashboard_controller.py  filter_controller.py
dashboard/src/models/: container.py  enums.py  schema.py
dashboard/src/services/: data_service.py  district_service.py  prediction_service.py
dashboard/src/utils/: logger.py  visualization.py
dashboard/src/views/: base_view.py  dashboard_view.py  data_analysis_view.py  map_view.py  prediction_view.py
dashboard/src/widgets/: chart_widgets.py  filter_widgets.py  widget_factory.py
mlserver/: Dockerfile  main.py  model-settings.json  pyproject.toml  requirements.txt  setup.py  start.sh  temp_model_20240605_154633.bst  temp_model_20240607_104219.bst
mlserver/light_gbm_regression_serving_20240618_041413/: MLmodel  conda.yaml  model.pkl  python_env.yaml
pipeline/: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  export.py  main.py  mlflow.Dockerfile  pyproject.toml  requirements-mlflow.txt  run.sh  streamlit_app.py  train.py
pipeline/.metrics/: counter_88918.db  summary_88918.db
pipeline/hydra/: base.yaml
pipeline/results/: light_gbm_regression_serving_20250320_102038.pkl  light_gbm_regression_serving_20250320_122941.pkl  light_gbm_regression_serving_20250320_153616.pkl
pipeline/results/light_gbm_regression_serving_20240620_113109/: MLmodel  model.pkl
pipeline/results/light_gbm_regression_serving_20250320_101758/: MLmodel  model.pkl
pipeline/results/light_gbm_regression_serving_20250320_102038/: MLmodel  model.pkl
pipeline/results/light_gbm_regression_serving_20250320_102132/: MLmodel  model.pkl
pipeline/results/light_gbm_regression_serving_20250320_102233/: MLmodel  model.pkl
pipeline/src/: configure.py  deploy.py  experiment.py  logger.py  model_trainer.py  pipeline.py  preprocess.py  test.py  train.py  utils.py
pipeline/src/jobs/: register.py  train.py
scheduler/: Dockerfile  README.md  main.py  pyproject.toml
scheduler/tests/: test_notify.py
(+275 files in other folders)
