[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["eunsung <eunsung.shin@petfins.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
pandas = "^2.2.2"
plotly = "^5.21.0"
pandera = "^0.18.3"
streamlit = "^1.33.0"
dependency-injector = "^4.41.0"
mitosheet = "^0.2.16"
scikit-learn = "^1.6.1"
geopandas = "^1.0.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
