[tool.poetry]
name = "serving"
version = "0.1.0"
description = ""
authors = ["eunsung <eunsung.shin@petfins.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mlflow = {extras = ["extra"], version = "^2.14.0"}
lightgbm = "^4.4.0"
mlserver-mlflow = "^1.5.0"
mlserver = "^1.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
